fix search on mobile

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -74,6 +74,12 @@ $fb: #3b5998;
 	display: none !important;
 }
 
+input {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+}
+
 .ymaps-2-1-34-search {
 	display: none;
 	left: 35px;
